--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>proftool</groupId>
@@ -16,12 +17,12 @@
     </properties>
 
     <modules>
-        <module>byteman-automation-tool</module>
         <module>1-example-stdout</module>
         <module>2-byteman-stdout</module>
         <module>3-byteman-json</module>
         <module>4-byteman-jmx</module>
         <module>5-byteman-generic</module>
         <module>6-byteman-automate</module>
+        <module>byteman-automation-tool</module>
     </modules>
 </project>
