--- a/tutorial/6-byteman-automate/pom.xml
+++ b/tutorial/6-byteman-automate/pom.xml
@@ -3,13 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jboss.byteman.byteman-automate</groupId>
-    <artifactId>proftool</artifactId>
+    <groupId>org.jboss.byteman.automate.proftest</groupId>
+    <artifactId>proftest-06-byteman-automate</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
-
-    <name>Byteman Profiling Automation Tool</name>
-    <url>https://github.com/myllynen/byteman-automation-tutorial/tree/master/byteman-automation-tool</url>
 
     <properties>
         <byteman.version>4.0.2</byteman.version>
@@ -22,18 +19,8 @@
         <dependency>
             <groupId>org.jboss.byteman</groupId>
             <artifactId>byteman</artifactId>
+            <scope>provided</scope>
             <version>${byteman.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.byteman</groupId>
-            <artifactId>byteman-dtest</artifactId>
-            <version>${byteman.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
 
@@ -52,7 +39,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.jboss.byteman.automate.proftool.RuleCreator</mainClass>
+                                    <mainClass>org.jboss.byteman.automate.proftest.ProfTest</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -76,7 +63,7 @@
                             <failOnWarning>true</failOnWarning>
                             <scriptDir>src/main/resources</scriptDir>
                             <packages>
-                                <package>org.jboss.byteman.automate.proftool</package>
+                                <package>proftest</package>
                             </packages>
                             <includes>
                                 <include>**/*.btm</include>
