Use com.example for the test application
Byteman will not inject into certain classes, most notably those in
the org.jboss.byteman package hierarchy, in order to avoid the risk
of entering a recursive trigger processing loop.

See https://issues.jboss.org/browse/BYTEMAN-366.

Some assorted clean ups while at it.

--- a/tutorial/1-example-stdout/pom.xml
+++ b/tutorial/1-example-stdout/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jboss.byteman.automate</groupId>
+    <groupId>com.example.proftest</groupId>
     <artifactId>proftest-01-example-stdout</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
@@ -30,7 +30,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.jboss.byteman.automate.proftest.ProfTest</mainClass>
+                                    <mainClass>com.example.proftest.ProfTest</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
